// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button States Has a disabled state 1`] = `
.emotion-12 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.5rem;
  font-weight: 400;
}

.emotion-0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  opacity: 1;
}

.emotion-1 {
  box-sizing: border-box;
  width: auto;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border-width: 2px;
  border-style: solid;
  border-color: rgb(179,211,233);
  display: inline-block;
  outline: none;
  -webkit-transition: background-color 100ms ease-in,border-color 100ms ease-in;
  transition: background-color 100ms ease-in,border-color 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  cursor: not-allowed;
  color: rgb(255,255,255);
  background-color: rgb(179,211,233);
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  border-radius: 4px;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-1:active,
.emotion-1[data-active=true] {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3 {
  box-sizing: border-box;
  width: auto;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border-width: 2px;
  border-style: solid;
  border-color: rgb(179,211,233);
  display: inline-block;
  outline: none;
  -webkit-transition: background-color 100ms ease-in,border-color 100ms ease-in;
  transition: background-color 100ms ease-in,border-color 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  cursor: not-allowed;
  color: rgb(179,211,233);
  background-color: rgb(255,255,255);
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  border-radius: 4px;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: rgb(179,211,233);
  background-color: rgb(255,255,255);
  border-color: rgb(179,211,233);
}

.emotion-3:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
  color: rgb(179,211,233);
  background-color: rgb(255,255,255);
  border-color: rgb(179,211,233);
}

.emotion-3:active,
.emotion-3[data-active=true] {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: rgb(179,211,233);
  background-color: rgb(255,255,255);
  border-color: rgb(179,211,233);
}

.emotion-5 {
  box-sizing: border-box;
  width: auto;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border-width: 2px;
  border-style: solid;
  border-color: rgb(236,182,182);
  display: inline-block;
  outline: none;
  -webkit-transition: background-color 100ms ease-in,border-color 100ms ease-in;
  transition: background-color 100ms ease-in,border-color 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  cursor: not-allowed;
  color: rgb(255,255,255);
  background-color: rgb(236,182,182);
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  border-radius: 4px;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-5:active,
.emotion-5[data-active=true] {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7 {
  box-sizing: border-box;
  width: auto;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border-width: 0;
  border-style: solid;
  border-color: transparent;
  display: inline-block;
  outline: none;
  -webkit-transition: background-color 100ms ease-in,border-color 100ms ease-in;
  transition: background-color 100ms ease-in,border-color 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  cursor: not-allowed;
  color: rgb(236,182,182);
  padding-top: 0;
  padding-right: 0;
  padding-bottom: 0;
  padding-left: 0;
}

.emotion-7:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: rgb(236,182,182);
}

.emotion-7:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
  color: rgb(236,182,182);
}

.emotion-7:active,
.emotion-7[data-active=true] {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: rgb(236,182,182);
}

.emotion-9 {
  box-sizing: border-box;
  width: auto;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border-width: 0;
  border-style: solid;
  border-color: transparent;
  display: inline-block;
  outline: none;
  -webkit-transition: background-color 100ms ease-in,border-color 100ms ease-in;
  transition: background-color 100ms ease-in,border-color 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  cursor: not-allowed;
  color: rgb(179,211,233);
  padding-top: 0;
  padding-right: 0;
  padding-bottom: 0;
  padding-left: 0;
}

.emotion-9:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-9:active,
.emotion-9[data-active=true] {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11 {
  box-sizing: border-box;
  width: auto;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border-width: 0;
  border-style: solid;
  border-color: transparent;
  display: inline-block;
  outline: none;
  -webkit-transition: background-color 100ms ease-in,border-color 100ms ease-in;
  transition: background-color 100ms ease-in,border-color 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  cursor: not-allowed;
  padding-top: 0;
  padding-right: 0;
  padding-bottom: 0;
  padding-left: 0;
}

.emotion-11:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-11:active,
.emotion-11[data-active=true] {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
  className="emotion-12"
>
  <button
    aria-busy="false"
    className="emotion-1"
    color="colorTextInverse"
    cursor="not-allowed"
    disabled={true}
    display="inline-block"
    fontFamily="fontFamilyText"
    fontSize="fontSize30"
    fontWeight="fontWeightSemibold"
    textDecoration="none"
    type="button"
    width="auto"
  >
    <span
      aria-hidden="false"
      className="emotion-0"
      display="flex"
      opacity="1"
      textDecoration="inherit"
    >
      Submit
    </span>
  </button>
  <button
    aria-busy="false"
    className="emotion-3"
    color="colorTextLinkLight"
    cursor="not-allowed"
    disabled={true}
    display="inline-block"
    fontFamily="fontFamilyText"
    fontSize="fontSize30"
    fontWeight="fontWeightSemibold"
    textDecoration="none"
    type="button"
    width="auto"
  >
    <span
      aria-hidden="false"
      className="emotion-0"
      display="flex"
      opacity="1"
      textDecoration="inherit"
    >
      Submit
    </span>
  </button>
  <button
    aria-busy="false"
    className="emotion-5"
    color="colorTextInverse"
    cursor="not-allowed"
    disabled={true}
    display="inline-block"
    fontFamily="fontFamilyText"
    fontSize="fontSize30"
    fontWeight="fontWeightSemibold"
    textDecoration="none"
    type="button"
    width="auto"
  >
    <span
      aria-hidden="false"
      className="emotion-0"
      display="flex"
      opacity="1"
      textDecoration="inherit"
    >
      Submit
    </span>
  </button>
  <button
    aria-busy="false"
    className="emotion-7"
    color="colorTextLinkDestructiveLight"
    cursor="not-allowed"
    disabled={true}
    display="inline-block"
    fontFamily="fontFamilyText"
    fontWeight="fontWeightSemibold"
    textDecoration="none"
    type="button"
    width="auto"
  >
    <span
      aria-hidden="false"
      className="emotion-0"
      display="flex"
      opacity="1"
      textDecoration="inherit"
    >
      Submit
    </span>
  </button>
  <button
    aria-busy="false"
    className="emotion-9"
    color="colorTextLinkLight"
    cursor="not-allowed"
    disabled={true}
    display="inline-block"
    fontFamily="fontFamilyText"
    fontWeight="fontWeightSemibold"
    textDecoration="none"
    type="button"
    width="auto"
  >
    <span
      aria-hidden="false"
      className="emotion-0"
      display="flex"
      opacity="1"
      textDecoration="inherit"
    >
      Submit
    </span>
  </button>
  <button
    aria-busy="false"
    className="emotion-11"
    cursor="not-allowed"
    disabled={true}
    display="inline-block"
    fontFamily="fontFamilyText"
    fontWeight="fontWeightSemibold"
    textDecoration="none"
    type="button"
    width="auto"
  >
    <span
      aria-hidden="false"
      className="emotion-0"
      display="flex"
      opacity="1"
      textDecoration="inherit"
    >
      Submit
    </span>
  </button>
</div>
`;

exports[`Button States Has a loading state 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(359deg);
    -ms-transform: rotate(359deg);
    transform: rotate(359deg);
  }
}

.emotion-30 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.5rem;
  font-weight: 400;
}

.emotion-4 {
  box-sizing: border-box;
  width: auto;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border-width: 2px;
  border-style: solid;
  border-color: rgb(3,44,94);
  display: inline-block;
  outline: none;
  -webkit-transition: background-color 100ms ease-in,border-color 100ms ease-in;
  transition: background-color 100ms ease-in,border-color 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  cursor: wait;
  color: rgb(255,255,255);
  background-color: rgb(3,44,94);
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  border-radius: 4px;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-4:active,
.emotion-4[data-active=true] {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  opacity: 0;
}

.emotion-3 {
  box-sizing: border-box;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 1.5rem;
}

.emotion-2 {
  width: 1.25rem;
  height: 1.25rem;
  display: inline-block;
  opacity: 1;
  -webkit-transition: opacity 250ms cubic-bezier(0.215,0.61,0.355,1);
  transition: opacity 250ms cubic-bezier(0.215,0.61,0.355,1);
  -webkit-animation: animation-0 2s linear infinite;
  animation: animation-0 2s linear infinite;
}

@media screen and (prefers-reduced-motion:reduce) {
  .emotion-2 {
    -webkit-animation: none;
    animation: none;
  }
}

.emotion-1 {
  display: block;
  width: 1.25rem;
  height: 1.25rem;
  color: currentColor;
}

.emotion-9 {
  box-sizing: border-box;
  width: auto;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border-width: 2px;
  border-style: solid;
  border-color: rgb(220,234,244);
  display: inline-block;
  outline: none;
  -webkit-transition: background-color 100ms ease-in,border-color 100ms ease-in;
  transition: background-color 100ms ease-in,border-color 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  cursor: wait;
  color: rgb(3,44,94);
  background-color: rgb(220,234,244);
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  border-radius: 4px;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.emotion-9:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: rgb(3,44,94);
  background-color: rgb(220,234,244);
  border-color: rgb(220,234,244);
}

.emotion-9:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
  color: rgb(3,44,94);
  background-color: rgb(220,234,244);
  border-color: rgb(220,234,244);
}

.emotion-9:active,
.emotion-9[data-active=true] {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: rgb(3,44,94);
  background-color: rgb(220,234,244);
  border-color: rgb(220,234,244);
}

.emotion-14 {
  box-sizing: border-box;
  width: auto;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border-width: 2px;
  border-style: solid;
  border-color: rgb(96,1,1);
  display: inline-block;
  outline: none;
  -webkit-transition: background-color 100ms ease-in,border-color 100ms ease-in;
  transition: background-color 100ms ease-in,border-color 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  cursor: wait;
  color: rgb(255,255,255);
  background-color: rgb(96,1,1);
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  border-radius: 4px;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.emotion-14:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-14:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-14:active,
.emotion-14[data-active=true] {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-19 {
  box-sizing: border-box;
  width: auto;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border-width: 0;
  border-style: solid;
  border-color: transparent;
  display: inline-block;
  outline: none;
  -webkit-transition: background-color 100ms ease-in,border-color 100ms ease-in;
  transition: background-color 100ms ease-in,border-color 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  cursor: wait;
  color: rgb(146,18,0);
  padding-top: 0;
  padding-right: 0;
  padding-bottom: 0;
  padding-left: 0;
}

.emotion-19:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: rgb(146,18,0);
}

.emotion-19:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
  color: rgb(146,18,0);
}

.emotion-19:active,
.emotion-19[data-active=true] {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: rgb(146,18,0);
}

.emotion-24 {
  box-sizing: border-box;
  width: auto;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border-width: 0;
  border-style: solid;
  border-color: transparent;
  display: inline-block;
  outline: none;
  -webkit-transition: background-color 100ms ease-in,border-color 100ms ease-in;
  transition: background-color 100ms ease-in,border-color 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  cursor: wait;
  color: rgb(3,44,94);
  padding-top: 0;
  padding-right: 0;
  padding-bottom: 0;
  padding-left: 0;
}

.emotion-24:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-24:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-24:active,
.emotion-24[data-active=true] {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-29 {
  box-sizing: border-box;
  width: auto;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border-width: 0;
  border-style: solid;
  border-color: transparent;
  display: inline-block;
  outline: none;
  -webkit-transition: background-color 100ms ease-in,border-color 100ms ease-in;
  transition: background-color 100ms ease-in,border-color 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  cursor: wait;
  padding-top: 0;
  padding-right: 0;
  padding-bottom: 0;
  padding-left: 0;
}

.emotion-29:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-29:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-29:active,
.emotion-29[data-active=true] {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
  className="emotion-30"
>
  <button
    aria-busy="true"
    className="emotion-4"
    color="colorTextInverse"
    cursor="wait"
    disabled={true}
    display="inline-block"
    fontFamily="fontFamilyText"
    fontSize="fontSize30"
    fontWeight="fontWeightSemibold"
    textDecoration="none"
    type="button"
    width="auto"
  >
    <span
      aria-hidden="true"
      className="emotion-0"
      display="flex"
      opacity="0"
      textDecoration="inherit"
    >
      Submit
    </span>
    <span
      className="emotion-3"
      display="flex"
    >
      <div
        className="emotion-2"
        size="sizeIcon20"
      >
        <span
          className="emotion-1"
          color="currentColor"
          display="block"
          size="sizeIcon20"
        >
          <svg
            aria-hidden={false}
            aria-labelledby="1"
            height="100%"
            role="img"
            viewBox="0 0 24 24"
            width="100%"
          >
            <title
              id="1"
            >
              Loading, please wait.
            </title>
            <path
              d="M19.043 13.39l.08.014c.239.062.38.3.317.534-.89 3.255-3.932 5.562-7.444 5.562-2.935 0-5.553-1.613-6.85-4.064l-.278 2.85-.015.077a.457.457 0 01-.471.327.429.429 0 01-.4-.47l.41-4.19.017-.085a.456.456 0 01.592-.294l3.96 1.47.072.034a.428.428 0 01.177.53l-.036.071a.457.457 0 01-.542.187l-2.748-1.02c1.124 2.23 3.473 3.705 6.112 3.705 3.104 0 5.792-2.038 6.579-4.915a.447.447 0 01.468-.322zm-7.04-8.89c2.936 0 5.554 1.613 6.85 4.064l.28-2.849.014-.078a.457.457 0 01.471-.327.429.429 0 01.4.47l-.41 4.19-.017.085a.456.456 0 01-.592.295l-3.96-1.47-.072-.035a.428.428 0 01-.177-.53l.036-.071a.457.457 0 01.542-.186l2.748 1.019c-1.124-2.23-3.473-3.705-6.112-3.705-3.104 0-5.792 2.038-6.579 4.915a.447.447 0 01-.468.322l-.08-.013a.435.435 0 01-.317-.534C5.45 6.807 8.492 4.5 12.004 4.5z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
    </span>
  </button>
  <button
    aria-busy="true"
    className="emotion-9"
    color="colorTextLinkDarker"
    cursor="wait"
    disabled={true}
    display="inline-block"
    fontFamily="fontFamilyText"
    fontSize="fontSize30"
    fontWeight="fontWeightSemibold"
    textDecoration="none"
    type="button"
    width="auto"
  >
    <span
      aria-hidden="true"
      className="emotion-0"
      display="flex"
      opacity="0"
      textDecoration="inherit"
    >
      Submit
    </span>
    <span
      className="emotion-3"
      display="flex"
    >
      <div
        className="emotion-2"
        size="sizeIcon20"
      >
        <span
          className="emotion-1"
          color="currentColor"
          display="block"
          size="sizeIcon20"
        >
          <svg
            aria-hidden={false}
            aria-labelledby="2"
            height="100%"
            role="img"
            viewBox="0 0 24 24"
            width="100%"
          >
            <title
              id="2"
            >
              Loading, please wait.
            </title>
            <path
              d="M19.043 13.39l.08.014c.239.062.38.3.317.534-.89 3.255-3.932 5.562-7.444 5.562-2.935 0-5.553-1.613-6.85-4.064l-.278 2.85-.015.077a.457.457 0 01-.471.327.429.429 0 01-.4-.47l.41-4.19.017-.085a.456.456 0 01.592-.294l3.96 1.47.072.034a.428.428 0 01.177.53l-.036.071a.457.457 0 01-.542.187l-2.748-1.02c1.124 2.23 3.473 3.705 6.112 3.705 3.104 0 5.792-2.038 6.579-4.915a.447.447 0 01.468-.322zm-7.04-8.89c2.936 0 5.554 1.613 6.85 4.064l.28-2.849.014-.078a.457.457 0 01.471-.327.429.429 0 01.4.47l-.41 4.19-.017.085a.456.456 0 01-.592.295l-3.96-1.47-.072-.035a.428.428 0 01-.177-.53l.036-.071a.457.457 0 01.542-.186l2.748 1.019c-1.124-2.23-3.473-3.705-6.112-3.705-3.104 0-5.792 2.038-6.579 4.915a.447.447 0 01-.468.322l-.08-.013a.435.435 0 01-.317-.534C5.45 6.807 8.492 4.5 12.004 4.5z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
    </span>
  </button>
  <button
    aria-busy="true"
    className="emotion-14"
    color="colorTextInverse"
    cursor="wait"
    disabled={true}
    display="inline-block"
    fontFamily="fontFamilyText"
    fontSize="fontSize30"
    fontWeight="fontWeightSemibold"
    textDecoration="none"
    type="button"
    width="auto"
  >
    <span
      aria-hidden="true"
      className="emotion-0"
      display="flex"
      opacity="0"
      textDecoration="inherit"
    >
      Submit
    </span>
    <span
      className="emotion-3"
      display="flex"
    >
      <div
        className="emotion-2"
        size="sizeIcon20"
      >
        <span
          className="emotion-1"
          color="currentColor"
          display="block"
          size="sizeIcon20"
        >
          <svg
            aria-hidden={false}
            aria-labelledby="3"
            height="100%"
            role="img"
            viewBox="0 0 24 24"
            width="100%"
          >
            <title
              id="3"
            >
              Loading, please wait.
            </title>
            <path
              d="M19.043 13.39l.08.014c.239.062.38.3.317.534-.89 3.255-3.932 5.562-7.444 5.562-2.935 0-5.553-1.613-6.85-4.064l-.278 2.85-.015.077a.457.457 0 01-.471.327.429.429 0 01-.4-.47l.41-4.19.017-.085a.456.456 0 01.592-.294l3.96 1.47.072.034a.428.428 0 01.177.53l-.036.071a.457.457 0 01-.542.187l-2.748-1.02c1.124 2.23 3.473 3.705 6.112 3.705 3.104 0 5.792-2.038 6.579-4.915a.447.447 0 01.468-.322zm-7.04-8.89c2.936 0 5.554 1.613 6.85 4.064l.28-2.849.014-.078a.457.457 0 01.471-.327.429.429 0 01.4.47l-.41 4.19-.017.085a.456.456 0 01-.592.295l-3.96-1.47-.072-.035a.428.428 0 01-.177-.53l.036-.071a.457.457 0 01.542-.186l2.748 1.019c-1.124-2.23-3.473-3.705-6.112-3.705-3.104 0-5.792 2.038-6.579 4.915a.447.447 0 01-.468.322l-.08-.013a.435.435 0 01-.317-.534C5.45 6.807 8.492 4.5 12.004 4.5z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
    </span>
  </button>
  <button
    aria-busy="true"
    className="emotion-19"
    color="colorTextLinkDestructiveDarker"
    cursor="wait"
    disabled={true}
    display="inline-block"
    fontFamily="fontFamilyText"
    fontWeight="fontWeightSemibold"
    textDecoration="none"
    type="button"
    width="auto"
  >
    <span
      aria-hidden="true"
      className="emotion-0"
      display="flex"
      opacity="0"
      textDecoration="inherit"
    >
      Submit
    </span>
    <span
      className="emotion-3"
      display="flex"
    >
      <div
        className="emotion-2"
        size="sizeIcon20"
      >
        <span
          className="emotion-1"
          color="currentColor"
          display="block"
          size="sizeIcon20"
        >
          <svg
            aria-hidden={false}
            aria-labelledby="4"
            height="100%"
            role="img"
            viewBox="0 0 24 24"
            width="100%"
          >
            <title
              id="4"
            >
              Loading, please wait.
            </title>
            <path
              d="M19.043 13.39l.08.014c.239.062.38.3.317.534-.89 3.255-3.932 5.562-7.444 5.562-2.935 0-5.553-1.613-6.85-4.064l-.278 2.85-.015.077a.457.457 0 01-.471.327.429.429 0 01-.4-.47l.41-4.19.017-.085a.456.456 0 01.592-.294l3.96 1.47.072.034a.428.428 0 01.177.53l-.036.071a.457.457 0 01-.542.187l-2.748-1.02c1.124 2.23 3.473 3.705 6.112 3.705 3.104 0 5.792-2.038 6.579-4.915a.447.447 0 01.468-.322zm-7.04-8.89c2.936 0 5.554 1.613 6.85 4.064l.28-2.849.014-.078a.457.457 0 01.471-.327.429.429 0 01.4.47l-.41 4.19-.017.085a.456.456 0 01-.592.295l-3.96-1.47-.072-.035a.428.428 0 01-.177-.53l.036-.071a.457.457 0 01.542-.186l2.748 1.019c-1.124-2.23-3.473-3.705-6.112-3.705-3.104 0-5.792 2.038-6.579 4.915a.447.447 0 01-.468.322l-.08-.013a.435.435 0 01-.317-.534C5.45 6.807 8.492 4.5 12.004 4.5z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
    </span>
  </button>
  <button
    aria-busy="true"
    className="emotion-24"
    color="colorTextLinkDarker"
    cursor="wait"
    disabled={true}
    display="inline-block"
    fontFamily="fontFamilyText"
    fontWeight="fontWeightSemibold"
    textDecoration="none"
    type="button"
    width="auto"
  >
    <span
      aria-hidden="true"
      className="emotion-0"
      display="flex"
      opacity="0"
      textDecoration="inherit"
    >
      Submit
    </span>
    <span
      className="emotion-3"
      display="flex"
    >
      <div
        className="emotion-2"
        size="sizeIcon20"
      >
        <span
          className="emotion-1"
          color="currentColor"
          display="block"
          size="sizeIcon20"
        >
          <svg
            aria-hidden={false}
            aria-labelledby="5"
            height="100%"
            role="img"
            viewBox="0 0 24 24"
            width="100%"
          >
            <title
              id="5"
            >
              Loading, please wait.
            </title>
            <path
              d="M19.043 13.39l.08.014c.239.062.38.3.317.534-.89 3.255-3.932 5.562-7.444 5.562-2.935 0-5.553-1.613-6.85-4.064l-.278 2.85-.015.077a.457.457 0 01-.471.327.429.429 0 01-.4-.47l.41-4.19.017-.085a.456.456 0 01.592-.294l3.96 1.47.072.034a.428.428 0 01.177.53l-.036.071a.457.457 0 01-.542.187l-2.748-1.02c1.124 2.23 3.473 3.705 6.112 3.705 3.104 0 5.792-2.038 6.579-4.915a.447.447 0 01.468-.322zm-7.04-8.89c2.936 0 5.554 1.613 6.85 4.064l.28-2.849.014-.078a.457.457 0 01.471-.327.429.429 0 01.4.47l-.41 4.19-.017.085a.456.456 0 01-.592.295l-3.96-1.47-.072-.035a.428.428 0 01-.177-.53l.036-.071a.457.457 0 01.542-.186l2.748 1.019c-1.124-2.23-3.473-3.705-6.112-3.705-3.104 0-5.792 2.038-6.579 4.915a.447.447 0 01-.468.322l-.08-.013a.435.435 0 01-.317-.534C5.45 6.807 8.492 4.5 12.004 4.5z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
    </span>
  </button>
  <button
    aria-busy="true"
    className="emotion-29"
    cursor="wait"
    disabled={true}
    display="inline-block"
    fontFamily="fontFamilyText"
    fontWeight="fontWeightSemibold"
    textDecoration="none"
    type="button"
    width="auto"
  >
    <span
      aria-hidden="true"
      className="emotion-0"
      display="flex"
      opacity="0"
      textDecoration="inherit"
    >
      Submit
    </span>
    <span
      className="emotion-3"
      display="flex"
    >
      <div
        className="emotion-2"
        size="sizeIcon20"
      >
        <span
          className="emotion-1"
          color="currentColor"
          display="block"
          size="sizeIcon20"
        >
          <svg
            aria-hidden={false}
            aria-labelledby="6"
            height="100%"
            role="img"
            viewBox="0 0 24 24"
            width="100%"
          >
            <title
              id="6"
            >
              Loading, please wait.
            </title>
            <path
              d="M19.043 13.39l.08.014c.239.062.38.3.317.534-.89 3.255-3.932 5.562-7.444 5.562-2.935 0-5.553-1.613-6.85-4.064l-.278 2.85-.015.077a.457.457 0 01-.471.327.429.429 0 01-.4-.47l.41-4.19.017-.085a.456.456 0 01.592-.294l3.96 1.47.072.034a.428.428 0 01.177.53l-.036.071a.457.457 0 01-.542.187l-2.748-1.02c1.124 2.23 3.473 3.705 6.112 3.705 3.104 0 5.792-2.038 6.579-4.915a.447.447 0 01.468-.322zm-7.04-8.89c2.936 0 5.554 1.613 6.85 4.064l.28-2.849.014-.078a.457.457 0 01.471-.327.429.429 0 01.4.47l-.41 4.19-.017.085a.456.456 0 01-.592.295l-3.96-1.47-.072-.035a.428.428 0 01-.177-.53l.036-.071a.457.457 0 01.542-.186l2.748 1.019c-1.124-2.23-3.473-3.705-6.112-3.705-3.104 0-5.792 2.038-6.579 4.915a.447.447 0 01-.468.322l-.08-.013a.435.435 0 01-.317-.534C5.45 6.807 8.492 4.5 12.004 4.5z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
    </span>
  </button>
</div>
`;

exports[`Button Variants Has a destructive variant 1`] = `
.emotion-2 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.5rem;
  font-weight: 400;
}

.emotion-0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  opacity: 1;
}

.emotion-1 {
  box-sizing: border-box;
  width: auto;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border-width: 2px;
  border-style: solid;
  border-color: rgb(226,37,37);
  display: inline-block;
  outline: none;
  -webkit-transition: background-color 100ms ease-in,border-color 100ms ease-in;
  transition: background-color 100ms ease-in,border-color 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  cursor: pointer;
  color: rgb(255,255,255);
  background-color: rgb(226,37,37);
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  border-radius: 4px;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: rgb(255,255,255);
  background-color: rgb(96,1,1);
  border-color: rgb(96,1,1);
}

.emotion-1:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
  color: rgb(255,255,255);
  border-color: rgb(96,1,1);
}

.emotion-1:active,
.emotion-1[data-active=true] {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
  color: rgb(255,255,255);
  background-color: rgb(96,1,1);
  border-color: rgb(96,1,1);
}

<div
  className="emotion-2"
>
  <button
    aria-busy="false"
    className="emotion-1"
    color="colorTextInverse"
    cursor="pointer"
    disabled={false}
    display="inline-block"
    fontFamily="fontFamilyText"
    fontSize="fontSize30"
    fontWeight="fontWeightSemibold"
    onClick={[Function]}
    textDecoration="none"
    type="button"
    width="auto"
  >
    <span
      aria-hidden="false"
      className="emotion-0"
      display="flex"
      opacity="1"
      textDecoration="inherit"
    >
      Delete
    </span>
  </button>
</div>
`;

exports[`Button Variants Has a destructive_link variant 1`] = `
.emotion-2 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.5rem;
  font-weight: 400;
}

.emotion-0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  opacity: 1;
}

.emotion-1 {
  box-sizing: border-box;
  width: auto;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border-width: 0;
  border-style: solid;
  border-color: transparent;
  display: inline-block;
  outline: none;
  -webkit-transition: background-color 100ms ease-in,border-color 100ms ease-in;
  transition: background-color 100ms ease-in,border-color 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  cursor: pointer;
  color: rgb(226,37,37);
  padding-top: 0;
  padding-right: 0;
  padding-bottom: 0;
  padding-left: 0;
}

.emotion-1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: rgb(178,6,0);
}

.emotion-1:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
  color: rgb(178,6,0);
}

.emotion-1:active,
.emotion-1[data-active=true] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
  color: rgb(146,18,0);
}

<div
  className="emotion-2"
>
  <button
    aria-busy="false"
    className="emotion-1"
    color="colorTextLinkDestructive"
    cursor="pointer"
    disabled={false}
    display="inline-block"
    fontFamily="fontFamilyText"
    fontWeight="fontWeightSemibold"
    onClick={[Function]}
    textDecoration="none"
    type="button"
    width="auto"
  >
    <span
      aria-hidden="false"
      className="emotion-0"
      display="flex"
      opacity="1"
      textDecoration="inherit"
    >
      Undo
    </span>
  </button>
</div>
`;

exports[`Button Variants Has a link variant 1`] = `
.emotion-2 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.5rem;
  font-weight: 400;
}

.emotion-0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  opacity: 1;
}

.emotion-1 {
  box-sizing: border-box;
  width: auto;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border-width: 0;
  border-style: solid;
  border-color: transparent;
  display: inline-block;
  outline: none;
  -webkit-transition: background-color 100ms ease-in,border-color 100ms ease-in;
  transition: background-color 100ms ease-in,border-color 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  cursor: pointer;
  color: rgb(0,94,166);
  padding-top: 0;
  padding-right: 0;
  padding-bottom: 0;
  padding-left: 0;
}

.emotion-1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: rgb(0,62,130);
}

.emotion-1:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
  color: rgb(0,62,130);
}

.emotion-1:active,
.emotion-1[data-active=true] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
  color: rgb(3,44,94);
}

<div
  className="emotion-2"
>
  <button
    aria-busy="false"
    className="emotion-1"
    color="colorTextLink"
    cursor="pointer"
    disabled={false}
    display="inline-block"
    fontFamily="fontFamilyText"
    fontWeight="fontWeightSemibold"
    onClick={[Function]}
    textDecoration="none"
    type="button"
    width="auto"
  >
    <span
      aria-hidden="false"
      className="emotion-0"
      display="flex"
      opacity="1"
      textDecoration="inherit"
    >
      Go to Paste
    </span>
  </button>
</div>
`;

exports[`Button Variants Has a primary variant 1`] = `
.emotion-2 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.5rem;
  font-weight: 400;
}

.emotion-1 {
  box-sizing: border-box;
  width: auto;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border-width: 2px;
  border-style: solid;
  border-color: rgb(2,122,197);
  display: inline-block;
  outline: none;
  -webkit-transition: background-color 100ms ease-in,border-color 100ms ease-in;
  transition: background-color 100ms ease-in,border-color 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  cursor: pointer;
  color: rgb(255,255,255);
  background-color: rgb(2,122,197);
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  border-radius: 4px;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: rgb(255,255,255);
  background-color: rgb(3,44,94);
  border-color: rgb(3,44,94);
}

.emotion-1:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
  color: rgb(255,255,255);
  border-color: rgb(3,44,94);
}

.emotion-1:active,
.emotion-1[data-active=true] {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
  color: rgb(255,255,255);
  background-color: rgb(0,62,130);
  border-color: rgb(3,44,94);
}

.emotion-0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  opacity: 1;
}

<div
  className="emotion-2"
>
  <button
    aria-busy="false"
    className="emotion-1"
    color="colorTextInverse"
    cursor="pointer"
    disabled={false}
    display="inline-block"
    fontFamily="fontFamilyText"
    fontSize="fontSize30"
    fontWeight="fontWeightSemibold"
    onClick={[Function]}
    textDecoration="none"
    type="submit"
    width="auto"
  >
    <span
      aria-hidden="false"
      className="emotion-0"
      display="flex"
      opacity="1"
      textDecoration="inherit"
    >
      Submit
    </span>
  </button>
</div>
`;

exports[`Button Variants Has a reset variant 1`] = `
.emotion-2 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.5rem;
  font-weight: 400;
}

.emotion-0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  opacity: 1;
}

.emotion-1 {
  box-sizing: border-box;
  width: auto;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border-width: 0;
  border-style: solid;
  border-color: transparent;
  display: inline-block;
  outline: none;
  -webkit-transition: background-color 100ms ease-in,border-color 100ms ease-in;
  transition: background-color 100ms ease-in,border-color 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  cursor: pointer;
  padding-top: 0;
  padding-right: 0;
  padding-bottom: 0;
  padding-left: 0;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-1:active,
.emotion-1[data-active=true] {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

<div
  className="emotion-2"
>
  <button
    aria-busy="false"
    className="emotion-1"
    cursor="pointer"
    disabled={false}
    display="inline-block"
    fontFamily="fontFamilyText"
    fontWeight="fontWeightSemibold"
    onClick={[Function]}
    textDecoration="none"
    type="button"
    width="auto"
  >
    <span
      aria-hidden="false"
      className="emotion-0"
      display="flex"
      opacity="1"
      textDecoration="inherit"
    >
      Hello World!
    </span>
  </button>
</div>
`;

exports[`Button Variants Has a secondary variant 1`] = `
.emotion-2 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.5rem;
  font-weight: 400;
}

.emotion-0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  opacity: 1;
}

.emotion-1 {
  box-sizing: border-box;
  width: auto;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border-width: 2px;
  border-style: solid;
  border-color: rgb(2,122,197);
  display: inline-block;
  outline: none;
  -webkit-transition: background-color 100ms ease-in,border-color 100ms ease-in;
  transition: background-color 100ms ease-in,border-color 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  cursor: pointer;
  color: rgb(0,94,166);
  background-color: rgb(255,255,255);
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  border-radius: 4px;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: rgb(0,94,166);
  background-color: rgb(245,248,255);
  border-color: rgb(3,44,94);
}

.emotion-1:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
  color: rgb(0,94,166);
  background-color: rgb(245,248,255);
  border-color: rgb(3,44,94);
}

.emotion-1:active,
.emotion-1[data-active=true] {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
  color: rgb(0,94,166);
  background-color: rgb(245,248,255);
  border-color: rgb(3,44,94);
}

<div
  className="emotion-2"
>
  <button
    aria-busy="false"
    className="emotion-1"
    color="colorTextLink"
    cursor="pointer"
    disabled={false}
    display="inline-block"
    fontFamily="fontFamilyText"
    fontSize="fontSize30"
    fontWeight="fontWeightSemibold"
    onClick={[Function]}
    textDecoration="none"
    type="button"
    width="auto"
  >
    <span
      aria-hidden="false"
      className="emotion-0"
      display="flex"
      opacity="1"
      textDecoration="inherit"
    >
      Submit
    </span>
  </button>
</div>
`;
